--- a/web/images/layout.css
+++ b/web/images/layout.css
@@ -9,7 +9,26 @@ and open the template in the editor.
 */
 * {
     font-family: arial;
-  }
+}
+/*.ptc-main-header {
+    background-color: #dbd9d9;
+    height: 100px;
+    border-width: 0px;
+}  */
+/*body {
+    background-color: #EDEDED;
+}*/
+
+/*header {
+    background-image: url(IntegrityWithSymbol.png);            
+    background-origin: content-box;
+    background-repeat: no-repeat;
+    background-position: left 10px top 10px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
+    border-width: 0px;
+    text-align: center;
+}*/
 .tabreiter
 {
     width: 100%;
