--- a/web/images/layout.css
+++ b/web/images/layout.css
@@ -29,6 +29,14 @@ and open the template in the editor.
     border-width: 0px;
     text-align: center;
 }*/
+
+hr {
+    height: 4px;
+    color: #009933;
+    background-color: #009933;
+    border: none;
+}
+
 .tabreiter
 {
     width: 100%;
